; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/haptic/extr_solenoid.c_solenoid_dwell_minus.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/haptic/extr_solenoid.c_solenoid_dwell_minus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @solenoid_dwell_minus(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp sgt i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i64, i64* %2, align 8
  %7 = add nsw i64 %6, -1
  store i64 %7, i64* %2, align 8
  br label %8

8:                                                ; preds = %5, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
